--- a/RxSwift_Instagram/RxSwift_Instagram/Resource/Storyboards/Main/Main.storyboard
+++ b/RxSwift_Instagram/RxSwift_Instagram/Resource/Storyboards/Main/Main.storyboard
@@ -17,13 +17,96 @@
                     <view key="view" contentMode="scaleToFill" id="jdT-9l-BMn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VqK-gq-s1g">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="VqK-gq-s1g" firstAttribute="top" secondItem="AF3-yC-epA" secondAttribute="top" id="1j4-zZ-vWl"/>
+                            <constraint firstItem="VqK-gq-s1g" firstAttribute="leading" secondItem="AF3-yC-epA" secondAttribute="leading" id="Z8j-zs-Rms"/>
+                            <constraint firstItem="AF3-yC-epA" firstAttribute="bottom" secondItem="VqK-gq-s1g" secondAttribute="bottom" id="hgB-V6-BaH"/>
+                            <constraint firstItem="AF3-yC-epA" firstAttribute="trailing" secondItem="VqK-gq-s1g" secondAttribute="trailing" id="qkg-hV-g6n"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="AF3-yC-epA"/>
                     </view>
+                    <connections>
+                        <outlet property="tbvPost" destination="VqK-gq-s1g" id="q8D-jW-cAM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rhY-1S-hpz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="81" y="170"/>
+        </scene>
+        <!--Camera View Controller-->
+        <scene sceneID="hRj-dQ-dxd">
+            <objects>
+                <viewController storyboardIdentifier="CameraViewController" id="0Mv-fD-yir" customClass="CameraViewController" customModule="RxSwift_Instagram" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yBE-uI-YYj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="52g-Vi-gk6">
+                                <rect key="frame" x="0.0" y="20" width="375" height="250"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="u6Z-5O-Rmn">
+                                        <rect key="frame" x="5" y="50" width="150" height="150"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="GYv-uh-zfQ"/>
+                                        </constraints>
+                                    </imageView>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="What are you thinking?" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="qAv-2f-gP8">
+                                        <rect key="frame" x="160" y="30" width="210" height="190"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="qAv-2f-gP8" firstAttribute="top" secondItem="52g-Vi-gk6" secondAttribute="top" constant="30" id="C5W-BB-O3Y"/>
+                                    <constraint firstAttribute="height" constant="250" id="E7Z-AR-VEr"/>
+                                    <constraint firstItem="qAv-2f-gP8" firstAttribute="leading" secondItem="u6Z-5O-Rmn" secondAttribute="trailing" constant="5" id="H0n-8q-yjd"/>
+                                    <constraint firstAttribute="bottom" secondItem="u6Z-5O-Rmn" secondAttribute="bottom" constant="50" id="JfP-TW-nxw"/>
+                                    <constraint firstItem="u6Z-5O-Rmn" firstAttribute="top" secondItem="52g-Vi-gk6" secondAttribute="top" constant="50" id="TgQ-4T-i9Z"/>
+                                    <constraint firstAttribute="trailing" secondItem="qAv-2f-gP8" secondAttribute="trailing" constant="5" id="Tzm-of-JVt"/>
+                                    <constraint firstAttribute="bottom" secondItem="qAv-2f-gP8" secondAttribute="bottom" constant="30" id="YYf-Do-np1"/>
+                                    <constraint firstItem="u6Z-5O-Rmn" firstAttribute="leading" secondItem="52g-Vi-gk6" secondAttribute="leading" constant="5" id="hro-wL-eee"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RL3-mj-odG">
+                                <rect key="frame" x="0.0" y="602" width="375" height="65"/>
+                                <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="JOc-DI-ubs"/>
+                                </constraints>
+                                <state key="normal" title="Share">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="G3Z-g5-UOr" firstAttribute="trailing" secondItem="RL3-mj-odG" secondAttribute="trailing" id="GVq-fe-mzj"/>
+                            <constraint firstItem="52g-Vi-gk6" firstAttribute="top" secondItem="G3Z-g5-UOr" secondAttribute="top" id="JNG-cO-Ds2"/>
+                            <constraint firstItem="52g-Vi-gk6" firstAttribute="leading" secondItem="G3Z-g5-UOr" secondAttribute="leading" id="LSl-kJ-GTk"/>
+                            <constraint firstItem="RL3-mj-odG" firstAttribute="leading" secondItem="G3Z-g5-UOr" secondAttribute="leading" id="M57-PE-9kz"/>
+                            <constraint firstItem="G3Z-g5-UOr" firstAttribute="bottom" secondItem="RL3-mj-odG" secondAttribute="bottom" id="RQ2-36-faO"/>
+                            <constraint firstItem="G3Z-g5-UOr" firstAttribute="trailing" secondItem="52g-Vi-gk6" secondAttribute="trailing" id="zqt-RW-V4a"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="G3Z-g5-UOr"/>
+                    </view>
+                    <connections>
+                        <outlet property="btnShare" destination="RL3-mj-odG" id="vAa-zW-Fu4"/>
+                        <outlet property="imgStatus" destination="u6Z-5O-Rmn" id="f9h-cb-5PJ"/>
+                        <outlet property="txvStatus" destination="qAv-2f-gP8" id="5VF-0m-sRy"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2VE-94-ySd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="816.79999999999995" y="169.56521739130437"/>
         </scene>
     </scenes>
 </document>
