Add method to upload status

--- a/RxSwift_Instagram/RxSwift_Instagram/Resource/Storyboards/Main/Main.storyboard
+++ b/RxSwift_Instagram/RxSwift_Instagram/Resource/Storyboards/Main/Main.storyboard
@@ -60,6 +60,7 @@
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="What are you thinking?" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="qAv-2f-gP8">
                                         <rect key="frame" x="160" y="30" width="210" height="190"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="textColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
