--- a/RxSwift_Instagram/RxSwift_Instagram/Views/HomeCell/HomeCell.xib
+++ b/RxSwift_Instagram/RxSwift_Instagram/Views/HomeCell/HomeCell.xib
@@ -22,7 +22,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K3l-ZN-WdY">
                         <rect key="frame" x="0.0" y="0.0" width="472" height="70"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hkB-rq-QZk">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hkB-rq-QZk">
                                 <rect key="frame" x="10" y="10" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="oWf-h2-qEn"/>
@@ -39,7 +39,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="hkB-rq-QZk" firstAttribute="leading" secondItem="K3l-ZN-WdY" secondAttribute="leading" constant="10" id="5YQ-75-gww"/>
                             <constraint firstItem="Vd6-Vm-wig" firstAttribute="leading" secondItem="hkB-rq-QZk" secondAttribute="trailing" constant="10" id="HNL-Ov-KD2"/>
@@ -52,7 +52,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="chZ-ZK-yir">
                         <rect key="frame" x="0.0" y="70" width="472" height="250"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ydE-pk-Xxf">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ydE-pk-Xxf">
                                 <rect key="frame" x="0.0" y="0.0" width="472" height="250"/>
                             </imageView>
                         </subviews>
@@ -99,7 +99,7 @@
                                     <constraint firstAttribute="height" constant="1" id="BkX-6b-LOC"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ALU-w0-AmV">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Be the first to Like this" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ALU-w0-AmV">
                                 <rect key="frame" x="10" y="41" width="462" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="zin-Pl-S60"/>
