--- a/RxSwift_Instagram/RxSwift_Instagram/Views/HomeCell/HomeCell.xib
+++ b/RxSwift_Instagram/RxSwift_Instagram/Views/HomeCell/HomeCell.xib
@@ -22,7 +22,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K3l-ZN-WdY">
                         <rect key="frame" x="0.0" y="0.0" width="472" height="70"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hkB-rq-QZk">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hkB-rq-QZk">
                                 <rect key="frame" x="10" y="10" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="oWf-h2-qEn"/>
@@ -52,11 +52,11 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="chZ-ZK-yir">
                         <rect key="frame" x="0.0" y="70" width="472" height="250"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ydE-pk-Xxf">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ydE-pk-Xxf">
                                 <rect key="frame" x="0.0" y="0.0" width="472" height="250"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="250" id="Dfj-io-PS9"/>
                             <constraint firstItem="ydE-pk-Xxf" firstAttribute="leading" secondItem="chZ-ZK-yir" secondAttribute="leading" id="SU4-hg-gFX"/>
